// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`html > can conditionally show/remove nodes 1`] = `"<div class=\\"checkout\\"><!----></div>"`;

exports[`html > can conditionally show/remove nodes 2`] = `"<div class=\\"checkout\\">Promo: <input type=\\"text\\"></div>"`;

exports[`html > can conditionally show/remove nodes 3`] = `"<div class=\\"checkout\\"><!----></div>"`;

exports[`html > can conditionally show/remove nodes 4`] = `"<div class=\\"checkout\\">Promo: <input type=\\"text\\"></div>"`;

exports[`html > can create a table with dynamic columns and rows 1`] = `
"<table>
      <tbody>
        <tr>
              <td>Detroit</td><td>MI</td>
            </tr><tr>
              <td>Boston</td><td>MA</td>
            </tr>
      </tbody>
    </table>"
`;

exports[`html > can place expression nested inside some elements inside a string 1`] = `
"This is cool
      <div>
        And here is more text
        <h2>Name: Hello ok?</h2>
      </div>
      <span>Hello</span>"
`;

exports[`html > can place expression nested inside some elements inside a string 2`] = `
"This is cool
      <div>
        And here is more text
        <h2>Name: Justin ok?</h2>
      </div>
      <span>Hello</span>"
`;

exports[`html > can remove and re-add multiple attributes 1`] = `
"<div data-org=\\"braid\\">
      virginia
    </div>"
`;

exports[`html > can remove and re-add multiple attributes 2`] = `
"<div data-org=\\"braid\\" x-precinct=\\"cville\\">
      virginia
    </div>"
`;

exports[`html > can remove and re-add multiple attributes 3`] = `
"<div x-precinct=\\"cville\\">
      virginia
    </div>"
`;

exports[`html > can remove and re-add multiple attributes 4`] = `
"<div x-precinct=\\"cville\\" data-org=\\"other\\">
      california
    </div>"
`;

exports[`html > can render a list with multiple repeated roots. 1`] = `
"<div>
      <h2>a</h2>
              <p>foobar</p><h2>b</h2>
              <p>foobar</p><h2>c</h2>
              <p>foobar</p>
    </div>"
`;

exports[`html > can render a simple non-reactive list 1`] = `
"Hello
      <ul>
        <li>a</li><li>b</li><li>c</li>
      </ul>"
`;

exports[`html > can render a simple non-reactive list 2`] = `
"Hello
      <ul>
        <li>a</li><li>b</li><li>c</li>
      </ul>"
`;

exports[`html > can render a simple reactive list 1`] = `
"Hello
      <ul>
        <li>a</li><li>b</li><li>c</li>
      </ul>"
`;

exports[`html > can render a simple reactive list 2`] = `
"Hello
      <ul>
        <li>a</li><li>b</li><li>c</li><li>next</li>
      </ul>"
`;

exports[`html > can render an array of items and mutate an item in the array (#49) 1`] = `
"<ul>
      <li>1</li><li>12</li><li>3</li>
    </ul>"
`;

exports[`html > can render nested nodes with attribute expressions 1`] = `
"<ul data-country=\\"usa\\">
      <li data-abbr=\\"va\\">virginia</li><li data-abbr=\\"ne\\">nebraska</li><li data-abbr=\\"ca\\">california</li>
      <li data-first-abbr=\\"va\\">
        virginia
      </li>
    </ul> "
`;

exports[`html > can render nested nodes with attribute expressions 2`] = `
"<ul data-country=\\"usa\\">
      <li data-abbr=\\"ca\\">california</li><li data-abbr=\\"ne\\">nebraska</li><li data-abbr=\\"va\\">virginia</li>
      <li data-first-abbr=\\"ca\\">
        california
      </li>
    </ul> "
`;

exports[`html > can render static expression in an attribute 1`] = `
"<div data-foo=\\"true\\">
      <h1>Hello world</h1>
    </div>"
`;

exports[`html > can render static expression in an attribute 2`] = `
"<div data-foo=\\"true\\">
      <h1>Hello world</h1>
    </div>"
`;
